@@ -1,3 +1,8 @@
+2007-02-12 17:16:48  Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/viewer3d/bg/ViewableBG.java: In pickSolid(),
+	picking an already selected cell unselects it.
+
 2007-02-08 15:04  jeromerobert
 
 	* *: Remove deprecated API uses and clean code
